fixed reference capitalization

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1,11 +1,15 @@
-@misc{rfc2313,
-  author       = "RSA Data Security, Inc.",
-  title        = "{PKCS 1: RSA Encryption Standard Version 1.5}",
-  howpublished = "{Request for Comments: 2313}",
-  institution  = "Internet Engineering Task Force",
-  year         = 1998,
-  month        = mar,
-  url          = "https://www.rfc-editor.org/rfc/rfc2313",
+@article{DBLP:journals/rfc/rfc2313,
+  author       = {Burt Kaliski},
+  title        = {{PKCS} {\#}1: {RSA} Encryption Version 1.5},
+  journal      = {{RFC}},
+  volume       = {2313},
+  pages        = {1--19},
+  year         = {1998},
+  url          = {https://doi.org/10.17487/RFC2313},
+  doi          = {10.17487/RFC2313},
+  timestamp    = {Tue, 14 May 2019 10:02:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/rfc/rfc2313.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @standard{ISO9796-1,
@@ -15,13 +19,26 @@
   note         = "Part 1 of the ISO/IEC 9796 standard",
 }
 
-@article{coppersmith1999iso,
-  title={ISO 9796-1 and the new forgery strategy},
-  author={Coppersmith, Don and Halevi, Shai and Jutla, Charanjit},
-  journal={rump session of Crypto},
-  volume={99},
-  year={1999}
+@inproceedings{DBLP:conf/eurocrypt/Grieu00,
+  author       = {Fran{\c{c}}ois Grieu},
+  editor       = {Bart Preneel},
+  title        = {A Chosen Messages Attack on the {ISO/IEC} 9796-1 Signature Scheme},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2000, International Conference
+                  on the Theory and Application of Cryptographic Techniques, Bruges,
+                  Belgium, May 14-18, 2000, Proceeding},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1807},
+  pages        = {70--80},
+  publisher    = {Springer},
+  year         = {2000},
+  url          = {https://doi.org/10.1007/3-540-45539-6\_5},
+  doi          = {10.1007/3-540-45539-6\_5},
+  timestamp    = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/Grieu00.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+
 
 @inproceedings{DBLP:conf/crypto/Bleichenbacher98,
   author       = {Daniel Bleichenbacher},
@@ -150,7 +167,7 @@
                   Eike Kiltz},
   editor       = {Yael Kalai and
                   Leonid Reyzin},
-  title        = {A Modular Analysis of the Fujisaki-Okamoto Transformation},
+  title        = {A Modular Analysis of the {F}ujisaki-{O}kamoto Transformation},
   booktitle    = {Theory of Cryptography - 15th International Conference, {TCC} 2017,
                   Baltimore, MD, USA, November 12-15, 2017, Proceedings, Part {I}},
   series       = {Lecture Notes in Computer Science},
@@ -192,7 +209,7 @@
   author       = {Hugo Krawczyk},
   editor       = {Joe Kilian},
   title        = {The Order of Encryption and Authentication for Protecting Communications
-                  (or: How Secure Is SSL?)},
+                  (or: How Secure Is {SSL}?)},
   booktitle    = {Advances in Cryptology - {CRYPTO} 2001, 21st Annual International
                   Cryptology Conference, Santa Barbara, California, USA, August 19-23,
                   2001, Proceedings},
@@ -214,7 +231,7 @@
                   Mihir Bellare and
                   Phillip Rogaway},
   editor       = {David Naccache},
-  title        = {The Oracle Diffie-Hellman Assumptions and an Analysis of {DHIES}},
+  title        = {The Oracle {D}iffie-{H}ellman Assumptions and an Analysis of {DHIES}},
   booktitle    = {Topics in Cryptology - {CT-RSA} 2001, The Cryptographer's Track at
                   {RSA} Conference 2001, San Francisco, CA, USA, April 8-12, 2001, Proceedings},
   series       = {Lecture Notes in Computer Science},
@@ -234,7 +251,7 @@
   author       = {Michel Abdalla and
                   Mihir Bellare and
                   Phillip Rogaway},
-  title        = {{DHAES:} An Encryption Scheme Based on the Diffie-Hellman Problem},
+  title        = {{DHAES:} An Encryption Scheme Based on the {D}iffie-{H}ellman Problem},
   journal      = {{IACR} Cryptol. ePrint Arch.},
   pages        = {7},
   year         = {1999},
@@ -243,7 +260,6 @@
   biburl       = {https://dblp.org/rec/journals/iacr/AbdallaBR99.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-
 
 
 @inproceedings{DBLP:conf/pkc/OkamotoP01,
@@ -388,7 +404,7 @@
 @inproceedings{DBLP:conf/ima/Dent03,
   author       = {Alexander W. Dent},
   editor       = {Kenneth G. Paterson},
-  title        = {A Designer's Guide to KEMs},
+  title        = {A Designer's Guide to {KEM}s},
   booktitle    = {Cryptography and Coding, 9th {IMA} International Conference, Cirencester,
                   UK, December 16-18, 2003, Proceedings},
   series       = {Lecture Notes in Computer Science},
@@ -424,7 +440,7 @@
                   Christian Majenz},
   editor       = {Shweta Agrawal and
                   Dongdai Lin},
-  title        = {Failing Gracefully: Decryption Failures and the Fujisaki-Okamoto Transform},
+  title        = {Failing Gracefully: Decryption Failures and the {F}ujisaki-{O}kamoto Transform},
   booktitle    = {Advances in Cryptology - {ASIACRYPT} 2022 - 28th International Conference
                   on the Theory and Application of Cryptology and Information Security,
                   Taipei, Taiwan, December 5-9, 2022, Proceedings, Part {IV}},
@@ -446,7 +462,7 @@
                   Takashi Yamakawa},
   editor       = {Jintai Ding and
                   Rainer Steinwandt},
-  title        = {(Tightly) QCCA-Secure Key-Encapsulation Mechanism in the Quantum Random
+  title        = {(Tightly) {QCCA}-Secure Key-Encapsulation Mechanism in the Quantum Random
                   Oracle Model},
   booktitle    = {Post-Quantum Cryptography - 10th International Conference, PQCrypto
                   2019, Chongqing, China, May 8-10, 2019 Revised Selected Papers},
@@ -471,7 +487,7 @@
                   Zhi Ma},
   editor       = {Hovav Shacham and
                   Alexandra Boldyreva},
-  title        = {IND-CCA-Secure Key Encapsulation Mechanism in the Quantum Random Oracle
+  title        = {{IND-CCA}-Secure Key Encapsulation Mechanism in the Quantum Random Oracle
                   Model, Revisited},
   booktitle    = {Advances in Cryptology - {CRYPTO} 2018 - 38th Annual International
                   Cryptology Conference, Santa Barbara, CA, USA, August 19-23, 2018,
@@ -499,7 +515,7 @@
                   Peter Schwabe and
                   Gregor Seiler and
                   Damien Stehl{\'{e}}},
-  title        = {{CRYSTALS} - Kyber: {A} CCA-Secure Module-Lattice-Based {KEM}},
+  title        = {{CRYSTALS} - {K}yber: {A} {CCA}-Secure Module-Lattice-Based {KEM}},
   booktitle    = {2018 {IEEE} European Symposium on Security and Privacy, EuroS{\&}P
                   2018, London, United Kingdom, April 24-26, 2018},
   pages        = {353--367},
@@ -521,7 +537,7 @@
   editor       = {Antoine Joux and
                   Abderrahmane Nitaj and
                   Tajjeeddine Rachidi},
-  title        = {Saber: Module-LWR Based Key Exchange, CPA-Secure Encryption and CCA-Secure
+  title        = {{S}aber: Module-{LWR} Based Key Exchange, {CPA}-Secure Encryption and {CCA}-Secure
                   {KEM}},
   booktitle    = {Progress in Cryptology - {AFRICACRYPT} 2018 - 10th International Conference
                   on Cryptology in Africa, Marrakesh, Morocco, May 7-9, 2018, Proceedings},
@@ -611,7 +627,7 @@
                   Junko Takahashi and
                   Naofumi Homma},
   title        = {Curse of Re-encryption: {A} Generic Power/EM Analysis on Post-Quantum
-                  KEMs},
+                  {KEM}s},
   journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
   volume       = {2022},
   number       = {1},
@@ -633,7 +649,7 @@
                   Junko Takahashi and
                   Naofumi Homma},
   title        = {Multiple-Valued Plaintext-Checking Side-Channel Attacks on Post-Quantum
-                  KEMs},
+                  {KEM}s},
   journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
   volume       = {2023},
   number       = {3},
@@ -710,19 +726,17 @@
 
 @misc{DBLP:conf/crypto/GuoJN20,
       author = {Qian Guo and Thomas Johansson and Alexander Nilsson},
-      title = {A key-recovery timing attack on post-quantum primitives using the Fujisaki-Okamoto transformation and its application on {FrodoKEM}},
+      title = {A key-recovery timing attack on post-quantum primitives using the {F}ujisaki-{O}kamoto transformation and its application on {FrodoKEM}},
       howpublished = {Cryptology {ePrint} Archive, Paper 2020/743},
       year = {2020},
       url = {https://eprint.iacr.org/2020/743}
 }
 
-@techreport{Hoffstein1999,
-  author       = {Jeffrey Hoffstein and Joseph H. Silverman},
-  title        = {Reaction attacks against the NTRU public key cryptosystem},
-  institution  = {NTRU Technical Report},
-  year         = {1999},
-  url          = {https://ntru.org/resources.shtml},
-  note         = {Available at \url{https://ntru.org/resources.shtml}}
+@techreport{hoffstein1999reaction,
+  title={Reaction attacks against the {NTRU} public key cryptosystem},
+  author={Hoffstein, Jeffrey and Silverman, Joseph H},
+  year={1999},
+  institution={Technical Report 15, NTRU Cryptosystems}
 }
 
 
@@ -978,15 +992,16 @@
   url          = {https://ipnpr.jpl.nasa.gov/progress_report2/42-44/44N.PDF}
 }
 
-@article{Niederreiter1986,
-  author    = {Harald Niederreiter},
-  title     = {Knapsack-type cryptosystems and algebraic coding theory},
-  journal   = {Problems of Control and Information Theory},
-  volume    = {15},
-  number    = {2},
-  pages     = {159--166},
-  year      = {1986}
+@article{niederreiter1986knapsack,
+  title={Knapsack-type cryptosystems and algebraic coding theory},
+  author={Niederreiter, Harald},
+  journal={Prob. Contr. Inform. Theory},
+  volume={15},
+  number={2},
+  pages={157--166},
+  year={1986}
 }
+
 
 @misc{ClassicMcEliece2022,
   author      = {Daniel J. Bernstein and 
@@ -1035,7 +1050,7 @@
                   Naofumi Homma},
   editor       = {Mehdi Tibouchi and
                   Huaxiong Wang},
-  title        = {Fault-Injection Attacks Against NIST's Post-Quantum Cryptography Round
+  title        = {Fault-Injection Attacks Against {NIST}'s Post-Quantum Cryptography Round
                   3 {KEM} Candidates},
   booktitle    = {Advances in Cryptology - {ASIACRYPT} 2021 - 27th International Conference
                   on the Theory and Application of Cryptology and Information Security,
@@ -1060,7 +1075,7 @@
   editor       = {Thomas Johansson and
                   Daniel Smith{-}Tone},
   title        = {Do Not Bound to a Single Position: Near-Optimal Multi-positional Mismatch
-                  Attacks Against Kyber and Saber},
+                  Attacks Against {K}yber and {S}aber},
   booktitle    = {Post-Quantum Cryptography - 14th International Workshop, PQCrypto
                   2023, College Park, MD, USA, August 16-18, 2023, Proceedings},
   series       = {Lecture Notes in Computer Science},
@@ -1082,7 +1097,7 @@
                   Jean{-}Pierre Tillich and
                   Nicolas Sendrier and
                   Paulo S. L. M. Barreto},
-  title        = {MDPC-McEliece: New McEliece variants from Moderate Density Parity-Check
+  title        = {{MDPC}-{M}c{E}liece: New {M}c{E}liece variants from Moderate Density Parity-Check
                   codes},
   booktitle    = {Proceedings of the 2013 {IEEE} International Symposium on Information
                   Theory, Istanbul, Turkey, July 7-12, 2013},
@@ -1104,18 +1119,30 @@
       url = {https://eprint.iacr.org/2014/070}
 }
 
-@inproceedings{bernstein2005poly1305,
-  title={The Poly1305-AES message-authentication code},
-  author={Bernstein, Daniel J},
-  booktitle={International workshop on fast software encryption},
-  pages={32--49},
-  year={2005},
-  organization={Springer}
+@inproceedings{DBLP:conf/fse/Bernstein05,
+  author       = {Daniel J. Bernstein},
+  editor       = {Henri Gilbert and
+                  Helena Handschuh},
+  title        = {The {P}oly1305-{AES} Message Authentication Code},
+  booktitle    = {Fast Software Encryption: 12th International Workshop, {FSE} 2005,
+                  Paris, France, February 21-23, 2005, Revised Selected Papers},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {3557},
+  pages        = {32--49},
+  publisher    = {Springer},
+  year         = {2005},
+  url          = {https://doi.org/10.1007/11502760\_3},
+  doi          = {10.1007/11502760\_3},
+  timestamp    = {Tue, 14 May 2019 10:00:54 +0200},
+  biburl       = {https://dblp.org/rec/conf/fse/Bernstein05.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
 @techreport{NIST80038D,
-  author = {National Institute of Standards and Technology},
-  title = {Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode (GCM) and GMAC},
+  author = {{National Institute of Standards and Technology}},
+  title = {Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode ({GCM}) and {GMAC}},
   institution = {U.S. Department of Commerce},
   number = {NIST Special Publication 800-38D},
   year = {2007},
@@ -1123,24 +1150,39 @@
 }
 
 @techreport{NIST80038B,
-  author = {National Institute of Standards and Technology},
-  title = {Recommendation for Block Cipher Modes of Operation: The CMAC Mode for Authentication},
+  author = {{National Institute of Standards and Technology}},
+  title = {Recommendation for Block Cipher Modes of Operation: The {CMAC} Mode for Authentication},
   institution = {U.S. Department of Commerce},
   number = {NIST Special Publication 800-38B},
   year = {2016},
   url = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-38B.pdf}
 }
-@inproceedings{black2000cbc,
-  title={CBC MACs for arbitrary-length messages: The three-key constructions},
-  author={Black, John and Rogaway, Phillip},
-  booktitle={Annual International Cryptology Conference},
-  pages={197--215},
-  year={2000},
-  organization={Springer}
+
+
+@inproceedings{DBLP:conf/crypto/BlackR00,
+  author       = {John Black and
+                  Phillip Rogaway},
+  editor       = {Mihir Bellare},
+  title        = {{CBC} {MAC}s for Arbitrary-Length Messages: The Three-Key Constructions},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2000, 20th Annual International
+                  Cryptology Conference, Santa Barbara, California, USA, August 20-24,
+                  2000, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1880},
+  pages        = {197--215},
+  publisher    = {Springer},
+  year         = {2000},
+  url          = {https://doi.org/10.1007/3-540-44598-6\_12},
+  doi          = {10.1007/3-540-44598-6\_12},
+  timestamp    = {Tue, 14 May 2019 10:00:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/BlackR00.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+
 @techreport{NIST800185,
   author = {John Kelsey and Shu-jen Chang and Ray Perlner},
-  title = {SHA-3 Derived Functions: cSHAKE, KMAC, TupleHash and ParallelHash},
+  title = {{SHA}-3 Derived Functions: {cSHAKE}, {KMAC}, {TupleHash} and {ParallelHash}},
   institution = {National Institute of Standards and Technology, U.S. Department of Commerce},
   number = {NIST Special Publication 800-185},
   year = {2016},
@@ -1148,7 +1190,7 @@
 }
 @techreport{NISTFIPS202,
   author = {{National Institute of Standards and Technology}},
-  title = {{SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions}},
+  title = {{{SHA}-3 Standard: Permutation-Based Hash and Extendable-Output Functions}},
   institution = {Federal Information Processing Standards (FIPS) Publication 202},
   year = {2015},
   month = {August},
@@ -1157,17 +1199,22 @@
   url = {http://dx.doi.org/10.6028/NIST.FIPS.202}
 }
 
-@misc{kyberrefimpl,
-  author       = {Joppe W. Bos and
-                  L{\'{e}}o Ducas and
-                  Eike Kiltz and
-                  Tancr{\`{e}}de Lepoint and
-                  Vadim Lyubashevsky and
-                  John M. Schanck and
-                  Peter Schwabe and
-                  Gregor Seiler and
-                  Damien Stehl{\'{e}}},
-  title={official reference implementation of the Kyber key encapsulation mechanism},
-  year={2024},
-  url={https://github.com/pq-crystals/kyber},
+@inproceedings{DBLP:conf/ches/Chou17,
+  author       = {Tung Chou},
+  editor       = {Wieland Fischer and
+                  Naofumi Homma},
+  title        = {McBits Revisited},
+  booktitle    = {Cryptographic Hardware and Embedded Systems - {CHES} 2017 - 19th International
+                  Conference, Taipei, Taiwan, September 25-28, 2017, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10529},
+  pages        = {213--231},
+  publisher    = {Springer},
+  year         = {2017},
+  url          = {https://doi.org/10.1007/978-3-319-66787-4\_11},
+  doi          = {10.1007/978-3-319-66787-4\_11},
+  timestamp    = {Fri, 09 Apr 2021 18:49:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/ches/Chou17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
