added reference to EliMAC

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1218,3 +1218,71 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
+@article{DBLP:journals/tosc/DobraunigMN23,
+  author       = {Christoph Dobraunig and
+                  Bart Mennink and
+                  Samuel Neves},
+  title        = {{EliMAC}: Speeding Up {LightMAC} by around 20{\%}},
+  journal      = {{IACR} Trans. Symmetric Cryptol.},
+  volume       = {2023},
+  number       = {2},
+  pages        = {69--93},
+  year         = {2023},
+  url          = {https://doi.org/10.46586/tosc.v2023.i2.69-93},
+  doi          = {10.46586/TOSC.V2023.I2.69-93},
+  timestamp    = {Sun, 12 Nov 2023 02:21:54 +0100},
+  biburl       = {https://dblp.org/rec/journals/tosc/DobraunigMN23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/fse/LuykxPTY16,
+  author       = {Atul Luykx and
+                  Bart Preneel and
+                  Elmar Tischhauser and
+                  Kan Yasuda},
+  editor       = {Thomas Peyrin},
+  title        = {A {MAC} Mode for Lightweight Block Ciphers},
+  booktitle    = {Fast Software Encryption - 23rd International Conference, {FSE} 2016,
+                  Bochum, Germany, March 20-23, 2016, Revised Selected Papers},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {9783},
+  pages        = {43--59},
+  publisher    = {Springer},
+  year         = {2016},
+  url          = {https://doi.org/10.1007/978-3-662-52993-5\_3},
+  doi          = {10.1007/978-3-662-52993-5\_3},
+  timestamp    = {Tue, 29 Dec 2020 18:38:21 +0100},
+  biburl       = {https://dblp.org/rec/conf/fse/LuykxPTY16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/crypto/IwataMPS17,
+  author       = {Tetsu Iwata and
+                  Kazuhiko Minematsu and
+                  Thomas Peyrin and
+                  Yannick Seurin},
+  editor       = {Jonathan Katz and
+                  Hovav Shacham},
+  title        = {{ZMAC:} {A} Fast Tweakable Block Cipher Mode for Highly Secure Message
+                  Authentication},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2017 - 37th Annual International
+                  Cryptology Conference, Santa Barbara, CA, USA, August 20-24, 2017,
+                  Proceedings, Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10403},
+  pages        = {34--65},
+  publisher    = {Springer},
+  year         = {2017},
+  url          = {https://doi.org/10.1007/978-3-319-63697-9\_2},
+  doi          = {10.1007/978-3-319-63697-9\_2},
+  timestamp    = {Fri, 27 Mar 2020 08:45:59 +0100},
+  biburl       = {https://dblp.org/rec/conf/crypto/IwataMPS17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
