draft of abstract

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1286,3 +1286,29 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
+@inproceedings{DBLP:conf/ccs/HermelinkN0S24,
+  author       = {Julius Hermelink and
+                  Kai{-}Chun Ning and
+                  Richard Petri and
+                  Emanuele Strieder},
+  editor       = {Bo Luo and
+                  Xiaojing Liao and
+                  Jun Xu and
+                  Engin Kirda and
+                  David Lie},
+  title        = {The Insecurity of Masked Comparisons: SCAs on ML-KEM's FO-Transform},
+  booktitle    = {Proceedings of the 2024 on {ACM} {SIGSAC} Conference on Computer and
+                  Communications Security, {CCS} 2024, Salt Lake City, UT, USA, October
+                  14-18, 2024},
+  pages        = {2430--2444},
+  publisher    = {{ACM}},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3658644.3690339},
+  doi          = {10.1145/3658644.3690339},
+  timestamp    = {Sun, 22 Dec 2024 15:48:19 +0100},
+  biburl       = {https://dblp.org/rec/conf/ccs/HermelinkN0S24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
